# bsc-data

./: .gitignore  pyproject.toml
bsc_pathways/: sk_model_utils.py
bsc_pathways/original_genetic_data/: stage_classification_gene_expressions.py  stage_classification_gene_expressions_separate.py
bsc_pathways/original_genetic_data/data/: README.txt  test_clinical_stage.csv  train_clinical_stage.csv
bsc_pathways/pathway_enrichment_v1/: initial_stage_classification.py  pathways_from_genes.py  trajectory_classification_LSTM.py  trajectory_classification_baselines.py
bsc_pathways/pathway_enrichment_v1/data/: README.txt
bsc_pathways/pathway_enrichment_v1/models/: lstm.py
bsc_pathways/pathway_enrichment_v2/: BC_Stage_Classifier.ipynb  data_utils.py  stage_classification.py  stage_classification_both.py  trajectories_exploration.py  trajectories_exploration_both.py  transition_classification.py
bsc_pathways/pathway_enrichment_v2/data/: ductal.csv  ductal_trajectories_wide.csv  lobular.csv  lobular_trajectories_wide.csv  real_patients_enrichments.csv
