[tool.poetry]
name = "bsc-pathways"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10.13"
numpy = "^1.26.1"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
pandas = "^2.1.2"
black = "^23.10.1"
scikit-learn = "^1.3.2"
snorkel = "^0.9.9"
dask = "^2023.10.1"
rich = "^13.6.0"
matplotlib = "^3.8.1"
torchmetrics = "^1.2.0"
pylint = "^3.0.2"
pyarrow = "^15.0.0"
debugpy = "^1.8.1"
xgboost = "^2.0.3"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
